# alk_projektsemestralny1

./: .gitignore  README.md  launch_qt_client.py  pyproject.toml  requirements.txt  run_emulator.py  run_multi_device_emulator.py  run_simple_emulator.py  setup.py
config/: default.yaml  local.yaml.example  unified_device_config.yaml
config/device_configs/: example_sensor.yaml  motor_controller.yaml  pressure_sensor.yaml  temperature_sensor.yaml
docs/: README.md  device_emulator.md
docs/user/: installation.md
examples/: basic_client.py  basic_emulator.py  config_based_emulator.py  rest_api_client.py  simple_emulator_demo.py
scripts/: run_client.py  run_emulator.py
src/: __init__.py
src/client/: __init__.py  main.py
src/client/ui/: __init__.py
src/client/visualization/: __init__.py
src/device_emulator/: __init__.py  main.py
src/device_emulator/api/: __init__.py  rest_server.py
src/device_emulator/core/: __init__.py  data_generator.py  emulator.py  multi_device_emulator.py  simple_device.py  simple_emulator.py
src/device_emulator/protocols/: __init__.py
src/device_emulator/simulators/: __init__.py
src/qt_client/: README.md  __init__.py  api_client.py  api_client_thread.py  data_manager.py  launcher.py
src/shared/: __init__.py
src/shared/communication/: __init__.py
src/shared/models/: config.py  device_config.py  device_data.py  multi_device_config.py
src/shared/utils/: config_loader.py
